--- a/guestbook/src/main/resources/templates/guestbook/list.html
+++ b/guestbook/src/main/resources/templates/guestbook/list.html
@@ -98,6 +98,20 @@
                 $(".modal").modal();
             }
 
+            var searchForm = $("#searchForm");
+
+            $('.btn-search').click(function(e){
+
+                searchForm.submit();
+
+            });
+
+            $('.btn-clear').click(function(e){
+
+                searchForm.empty().submit();
+
+            });
+            
         </script>
 
     </th:block>
